@@ -1,4 +1,5 @@
 ﻿+++ version 1.0-alpha1
+* core: #2058 fixed: avoid notifications flood on connection error (Juzef)
 
 +++ version 0.12.0-rc2
 
